--- a/src/main/resources/static/maincss.css
+++ b/src/main/resources/static/maincss.css
@@ -22,6 +22,22 @@
     font-style: italic;
 }
 
+.order-box {
+    flex-basis: calc(50% - 10px);
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    transition: box-shadow 0.3s ease;
+    box-sizing: border-box;
+    background-color: #DEE5D4;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    min-height: 300px;
+}
+
 .product-container {
     display: flex;
     flex-wrap: wrap;
@@ -38,15 +54,15 @@
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     transition: box-shadow 0.3s ease;
     box-sizing: border-box;
-    background-color: #D2E0FB; /* Light blue from the palette */
+    background-color: #D2E0FB;
     display: flex;
     flex-direction: column;
     align-items: center;
     position: relative;
-    min-height: 500px; /* Adjust as needed */
+    min-height: 500px;
 }
 
-.product-box:hover {
+.product-box:hover, .order-box:hover {
     box-shadow: 0 5px 15px rgba(0,0,0,0.2);
 }
 
@@ -71,7 +87,7 @@
 }
 
 .product-box img {
-    /*max-width: 100%;*/
+    box-shadow: 10px 10px 15px 5px #333333;
     max-height: 250px;
     max-width: 300px;
     height: auto;
@@ -106,7 +122,7 @@
 }
 /*5D7CA6*/
 .btn-info:hover {
-    background-color: #8EACCD; /* Darker shade of the blue */
+    background-color: #8EACCD;
 }
 
 @media (max-width: 768px) {
