--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -5,37 +5,21 @@
 
 <div th:replace="~{fragments/header}"></div>
 
-<div th:if="${message}" class="alert alert-success">
-    <p th:text="${message}"></p>
-</div>
-
-
 <div class="container">
-
     <h1>Orders</h1>
-    <table class="table table-bordered table-striped" id="orderTable">
-        <thead>
-        <tr>
-            <th>Order ID</th>
-            <th>Order Date</th>
-            <th>Shipment Address</th>
-            <th>Total Price</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="order: ${orders}">
-            <td th:text="${order.id}"></td>
-            <td th:text="${order.orderDate}"></td>
-            <td th:text="${order.shipmentAddress}"></td>
-            <td th:text="${order.totalPrice}"></td>
-            <td>
-                <a th:href="@{/order/{id}(id=${order.id})}" class="btn btn-info">View Order Details</a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-</div>
+    <div class="product-container">
+        <div th:each="order, iterStat: ${orders}" class="product-box">
+            <h2 th:text="${order.id}"></h2>
+            <p th:text="${order.orderDate}"></p>
+            <p th:text="${order.shipmentAddress}"></p>
+            <p class="price" th:text="'$' + ${#numbers.formatDecimal(order.totalPrice, 1, 2)}"></p>
 
+            <div class="product-actions">
+                <a th:href="@{/order/{id}(id=${order.id})}" class="btn btn-info">View</a>
+            </div>
+        </div>
+    </div>
+</div>
 
 <div th:if="${orders == null || #lists.isEmpty(orders)}">
     <p>No Orders available at the moment.</p>
