--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,30 +1,39 @@
-<header th:fragment="header">
-    <nav>
-        <img th:src="@{/CartLogo.jpg}" alt="logo" style="width:50px;height:50px">
-        <div>
-    <span sec:authorize="isAnonymous()">
-        Welcome! Please <a th:href="@{/login}">log in</a>
-        or <a th:href="@{/register}">register with us</a>.
-    </span>
-            <span sec:authorize="isAuthenticated()">
-        Welcome, <span sec:authentication="name">
-    </span>!
-        <a th:href="@{/logout}" class="btn btn-danger p-2">Logout</a>
-    </span>
-        </div>
-        <ul>
-            <li><a th:href="@{/}">View all Products</a></li>
-            <li th:if="${#authorization.expression('isAuthenticated() and hasAuthority(''ROLE_SELLER'')')}"><a th:href="@{/seller/add}">Add a Product</a></li>
-            <li th:if="${#authorization.expression('isAuthenticated() and hasAuthority(''ROLE_ADMIN'')')}"><a th:href="@{/admin}">Admin main directory</a></li>
-            <li th:if="${#authorization.expression('isAuthenticated() and hasAuthority(''ROLE_BUYER'')')}"><a th:href="@{/buyer/cart}">Your Cart</a></li>
-            <li th:if="${#authorization.expression('isAuthenticated() and hasAuthority(''ROLE_BUYER'')')}"><a th:href="@{/orders}">Your Orders</a></li>
-        </ul>
-    </nav>
-    <div th:if="${flashMessageSuccess}" class="alert alert-success">
-        <p th:text="${flashMessageSuccess}"></p>
-    </div>
-    <div th:if="${flashMessageError}" class="alert alert-danger">
-        <p th:text="${flashMessageError}"></p>
-    </div>
+<header th:fragment="header" >
+    <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #D2E0FB; padding: 10px;" >
+        <a class="navbar-brand" th:href="@{/}">
+            <img th:src="@{/CartLogo.jpg}" alt="logo" class="logo img-fluid rounded-circle shadow" style="width: 50px; height: 50px;">
+        </a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/}">View all Products</a>
+                </li>
+                <li class="nav-item" th:if="${#authorization.expression('isAuthenticated() and hasAuthority(''ROLE_SELLER'')')}">
+                    <a class="nav-link" th:href="@{/seller/add}">Add a Product</a>
+                </li>
+                <li class="nav-item" th:if="${#authorization.expression('isAuthenticated() and hasAuthority(''ROLE_ADMIN'')')}">
+                    <a class="nav-link" th:href="@{/admin}">Admin main directory</a>
+                </li>
+                <li class="nav-item" th:if="${#authorization.expression('isAuthenticated() and hasAuthority(''ROLE_BUYER'')')}">
+                    <a class="nav-link" th:href="@{/buyer/cart}">Your Cart</a>
+                </li>
+                <li class="nav-item" th:if="${#authorization.expression('isAuthenticated() and hasAuthority(''ROLE_BUYER'')')}">
+                    <a class="nav-link" th:href="@{/orders}">Your Orders</a>
+                </li>
+            </ul>
+            <div class="ml-auto d-flex align-items-center">
+                <span sec:authorize="isAnonymous()" class="mr-4 align-self-center">
+                    Welcome! Please
+                    <a th:href="@{/login}" class="btn btn-outline-primary">Log In</a>
+                    or
+                    <a th:href="@{/register}" class="btn btn-outline-secondary">Register</a>
+                </span>
 
+                <span sec:authorize="isAuthenticated()" class="d-flex align-items-center ml-4"> <!-- Increased margin -->
+                    Welcome, <span sec:authentication="name"></span>!
+                    <a th:href="@{/logout}" class="btn btn-danger ml-2">Logout</a>
+                </span>
+            </div>
+        </div>
+    </nav>
 </header>
