--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,12 +14,6 @@
 
 <div th:if="${#authorization.expression('isAuthenticated() and hasAuthority(''ROLE_SELLER'')')}"><a th:href="@{/seller/orderItems}">Orders on your Products</a></div>
 
-<div th:if="${message}" class="alert alert-success">
-    <p th:text="${message}"></p>
-</div>
-
-<h1>Products</h1>
-
 <div class="container">
     <div th:if="${#authorization.expression('isAuthenticated() and hasAuthority(''ROLE_SELLER'')')}">
         <span th:if="${isSellerEqualUser}">
@@ -28,11 +22,11 @@
         <a th:href="@{/seller/{currentUserId}/products(currentUserId=${currentUserId})}" class="btn btn-info">View Your Products</a>
     </div>
 
-    <h1>List of Products</h1>
+    <h1 class="roboto-bold">List of Products</h1>
 
     <div class="product-container">
         <div th:each="product, iterStat: ${products}" th:if="${product.stockAmount > 0}" class="product-box">
-            <h2 th:text="${product.name}" style="font-family:'Roboto', sans-serif; font-weight: 700;"></h2>
+            <h2 th:text="${product.name}" class="roboto-bold"></h2>
             <p th:text="${product.description}"></p>
             <p class="price" th:text="'$' + ${#numbers.formatDecimal(product.price, 1, 2)}"></p>
             <div th:if="${product.imageUrl == null}">No image found.</div>
