--- a/src/main/resources/templates/buyer-cart.html
+++ b/src/main/resources/templates/buyer-cart.html
@@ -6,8 +6,7 @@
 <div id="cartNotif"></div>
 
 <div th:if="${cartItems}">
-    <h1>Your Cart</h1>
-    <table class="table table-bordered table-striped" id="productTable">
+    <table class="table table-bordered table-striped mt-5" id="productTable">
         <thead>
         <tr>
             <th>Product Name</th>
