--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,6 @@
 <body>
 
 <div th:replace="~{fragments/header}"></div>
-<div th:if="${#authorization.expression('isAuthenticated()')}"><a th:href="@{/users/settings}">Account settings</a></div>
 
 <div th:if="${#authorization.expression('isAuthenticated()')}">
     <span th:if="${user.picture}">
@@ -12,25 +11,14 @@
     </span>
 </div>
 
-<div th:if="${#authorization.expression('isAuthenticated() and hasAuthority(''ROLE_SELLER'')')}"><a th:href="@{/seller/orderItems}">Orders on your Products</a></div>
-
 <div th:if="${message}" class="alert alert-success">
     <p th:text="${message}"></p>
 </div>
 
-<h1>Products</h1>
 
 <div class="container">
-    <div th:if="${#authorization.expression('isAuthenticated() and hasAuthority(''ROLE_SELLER'')')}">
-        <span th:if="${isSellerEqualUser}">
-            <a th:href="@{/seller/add}" class="btn btn-info">Add a product</a>
-        </span>
-        <a th:href="@{/seller/{currentUserId}/products(currentUserId=${currentUserId})}" class="btn btn-info">View Your Products</a>
-    </div>
 
-    <h1>List of Products</h1>
-
-    <div class="product-container">
+    <div class="product-container mt-5">
         <div th:each="product, iterStat: ${products}" th:if="${product.stockAmount > 0}" class="product-box">
             <h2 th:text="${product.name}" style="font-family:'Roboto', sans-serif; font-weight: 700;"></h2>
             <p th:text="${product.description}"></p>
