--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -6,8 +6,7 @@
 <div th:replace="~{fragments/header}"></div>
 
 <div class="container">
-    <h1>Orders</h1>
-    <div class="product-container">
+    <div class="product-container mt-5">
         <div th:each="order, iterStat: ${orders}" class="product-box">
             <h2 th:text="${order.id}"></h2>
             <p th:text="${order.orderDate}"></p>
