--- a/src/main/resources/templates/user-settings.html
+++ b/src/main/resources/templates/user-settings.html
@@ -3,17 +3,15 @@
 <head th:replace="~{fragments/head :: head('Settings')}">
 </head>
 
-<body class="d-flex align-items-center justify-content-center">
+<body >
+<div th:replace="~{fragments/header}"></div>
 
-<div class="container my-5">
+<div class="container my-5 d-flex align-items-center justify-content-center">
     <span th:if="${user.picture}">
-        Current Profile Picture
         <img th:src="@{${user.picture}}" alt="User Image" style="width:150px;height:150px" />
     </span>
 
     <form th:action="@{/users/settings/edit}" th:object="${user}" method="post" class="form col-5 mx-auto" enctype="multipart/form-data">
-
-        <h3 class="text-center mb-3">Account Settings</h3>
 
         <div class="form-group mb-3">
             <label for="email">Email</label>
@@ -74,7 +72,6 @@
 
     </form>
     <hr/>
-    <a th:href="@{/}">Back to home page</a>
 </div>
 <script src="/user-settings.js"></script>
 </body>
