--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,5 @@
 <header th:fragment="header" >
-    <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #D2E0FB; padding: 10px;" >
+    <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #8EACCD; padding: 10px;" >
         <a class="navbar-brand" th:href="@{/}">
             <img th:src="@{/CartLogo.jpg}" alt="logo" class="logo img-fluid rounded-circle shadow" style="width: 50px; height: 50px;">
         </a>
