various fixes to logic and display

--- a/src/main/resources/templates/admin-users-add.html
+++ b/src/main/resources/templates/admin-users-add.html
@@ -4,7 +4,7 @@
 <body>
 <div class="card mb-4">
     <div class="card-header">
-        <h5 class="mb-0">Add New Category</h5>
+        <h5 class="mb-0">Add New User</h5>
     </div>
     <div class="card-body">
         <form th:action="@{/admin/users/add}" method="post" th:object="${user}" class="form col-5 mx-auto" enctype="multipart/form-data">
