--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -2,7 +2,10 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/head :: head('General error page')}"></head>
 <body>
-<h1>Uhoh! Our app is a work in progress. Let's get you back in there :-)</h1>
-<a th:href="@{/}">Index</a>
+<div th:replace="~{fragments/header}"></div>
+<h1 class="roboto-bold text-center">If you're seeing this page, you likely tried to access something you're not allowed to see,
+or doesn't even exist.</h1>
+<hr>
+<h3 class="text-center">You can use the handy navigation in the header to get back to the main site.</h3>
 </body>
 </html>
